# make-it-stand

./: .gitignore  CMakeLists.txt  README.md  TODO  diary  main.cpp  scratch
cmake/: libigl.cmake
include/: arap_precompute.h  arap_single_iteration.h  center_of_mass.h  center_of_mass_grad.h  cube.h  deformation.h  face_contribution_to_com.h  helper_g.h  inner_carving.h  isovoxel.h  laplacian.h  linear_index.h  make_it_stand.h  mass.h  mass_grad.h  my_lbs_matrix.h  voxel_contouring.h  voxel_indices.h
src/: angle_defect.cpp  arap_precompute.cpp  arap_single_iteration.cpp  biharmonic_precompute.cpp  biharmonic_solve.cpp  center_of_mass.cpp  center_of_mass_grad.cpp  cube.cpp  deformation.cpp  face_contribution_to_com.cpp  helper_g.cpp  inner_carving.cpp  internal_angles.cpp  isovoxel.cpp  laplacian.cpp  linear_index.cpp  make_it_stand.cpp  mass.cpp  mass_grad.cpp  mean_curvature.cpp  my_lbs_matrix.cpp  principal_curvatures.cpp  update_lbs_matrix.cpp  update_lbs_matrix.h  voxel_contouring.cpp  voxel_indices.cpp
test/: CMakeLists.txt  center_of_mass_test.cpp  cube_test.cpp  example_test.cpp  helper_g_test.cpp  inner_carving_test.cpp  is_roughly_cube.cpp  is_roughly_cube.h  linear_index_test.cpp  voxel_contouring_test.cpp  voxel_indices_test.cpp
